--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -7,7 +7,7 @@ title: Hexo
 subtitle: ''
 description: ''
 keywords:
-author: Coral
+author: John Doe
 language: en
 timezone: ''
 
@@ -94,11 +94,11 @@ pagination_dir: page
 include:
 exclude:
 ignore:
-i`
+
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-sakura
+theme: hexo-theme-simperlog
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
